--- a/express-restraurant-UI/src/app/components/about/about.component.html
+++ b/express-restraurant-UI/src/app/components/about/about.component.html
@@ -1,1 +1,17 @@
-<p>about works!</p>
+<div class="about">
+  <div class="aboutright">
+    <h1>ABOUT OUR RESTAURANT FOOD & DRIKES</h1>
+    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente veniam, eaque doloremque dolorum placeat ratione porro? Incidunt praesentium atque aliquam officiis, voluptatem voluptates repellendus recusandae delectus possimus autem temporibus vitae vero sed ipsum harum?
+    </P>
+    <hr class="hr" style="width: 20%; margin-right: 70%; color: red;">
+    <p class="peragraf">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias incidunt eos aperiam excepturi, placeat dolorem veniam animi aspernatur consequatur ducimus, vero vitae mollitia culpa! Rerum architecto nihil est alias ab exercitationem provident sint dolore quos. Laborum nisi suscipit, praesentium architecto temporibus corporis sed officiis placeat blanditiis fugit distinctio nemo dignissimos veritatis ullam totam natus reprehenderit fugiat doloremque quis assumenda minus iure! Animi quae esse neque exercitationem nemo, natus aliquid enim!</p>
+    <br><br>
+    <div class="button">
+      <a href="#">READ MORE</a>
+    </div>
+  </div>
+
+  <div class="aboutleft">
+
+  </div>
+</div>
