--- a/express-restraurant-UI/src/app/components/our-menu/our-menu.component.html
+++ b/express-restraurant-UI/src/app/components/our-menu/our-menu.component.html
@@ -1,92 +1,60 @@
 <div class="section-title">
     <h2>our menu</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident, repudiandae!</p>
-     
-  </div>
-<div  class="col-nav " id="nav-menu">
+
+</div>
+<div class="col-nav " id="nav-menu">
     <ul>
-        <li><a href="showall.html">show all</a></li>
-        <li><a href="breakfast.html">breakfast</a></li>
-        <li><a href="lunch.html">lunch</a></li>
-        <li><a href="dinner.html">Dinner</a></li>
-        <li><a href="drinks.html">Drinks</a></li>
-        <li><a href="others.html">others</a></li>
+        <li><span [ngClass]="filters === 'all' ? 'active' : '' " (click)="filterMenu('all')">show all</span></li>
+        <li><span [ngClass]="filters === 'breakfast' ? 'active' : ''" (click)="filterMenu('breakfast')">breakfast</span>
+        </li>
+        <li><span [ngClass]="filters === 'lunch' ? 'active' : ''" (click)="filterMenu('lunch')">lunch</span></li>
+        <li><span [ngClass]="filters === 'dinner' ? 'active' : ''" (click)="filterMenu('dinner')">Dinner</span></li>
+        <li><span [ngClass]="filters === 'drinks' ? 'active' : ''" (click)="filterMenu('drinks')">Drinks</span></li>
+        <li><span [ngClass]="filters === 'other' ? 'active' : ''" (click)="filterMenu('other')">others</span></li>
     </ul>
-  </div>
+</div>
 <div class="mdiv">
-    <div class="fdiv">
-        <div class="single-menu">
-            <img src="../assets/image/01.jpg" alt="">
-            <div class="menu-content">
-                <h5>biryani <span>rs.50</span></h5>
-                <p>Lorem ipsum dolor sit amet.</p>
-            </div>
+    <ng-container *ngFor="let item of filterMenuItems">
+        <div class="fdiv">
+            <ng-container>
+                <div class="single-menu">
+                    <img [src]="item.imgPath" alt="">
+                    <div class="menu-content">
+                        <h5>{{item.title}} </h5>
+                        <p>{{item.discription}}</p>
+                        <p *ngIf="item.rating">
+                            <i class="fa-solid fa-star"
+                                [ngStyle]="(item.rating > 0) ? {'color': '#FFB03B'} : {'color': '#ece4c5'}"></i>
+                            <i class="fa-solid fa-star"
+                                [ngStyle]="(item.rating > 1) ? {'color': '#FFB03B'} : {'color': '#ece4c5'}"></i>
+                            <i class="fa-solid fa-star"
+                                [ngStyle]="(item.rating > 2) ? {'color': '#FFB03B'} : {'color': '#ece4c5'}"></i>
+                            <i class="fa-solid fa-star"
+                                [ngStyle]="(item.rating > 3) ? {'color': '#FFB03B'} : {'color': '#ece4c5'}"></i>
+                            <i class="fa-solid fa-star"
+                                [ngStyle]="(item.rating > 4) ? {'color': '#FFB03B'} : {'color': '#ece4c5'}"></i>
+                        </p>
+                        <div class="cart">
+                            <h4>{{item.price}}</h4>
+                            <div class="cart-2">
+                                <p (click) ="addInCart(item)"><i ng-style ="(item.click) ? {color: #8bc34a} : {color:#ffa41f}" class="fa-solid fa-cart-plus fa-xl" style="color: #FFB03B;"></i></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </ng-container>
         </div>
-        <div class="single-menu">
-            <img src="../assets/image/02.jpg" alt="">
-            <div class="menu-content">
-                <h5>food title <span>rs.50</span></h5>
-                <p>Lorem ipsum dolor sit amet.</p>
-            </div>
-        </div>
-        <div class="single-menu">
-            <img src="../assets/image/03.jpg" alt="">
-            <div class="menu-content">
-                <h5>food title <span>rs.50</span></h5>
-                <p>Lorem ipsum dolor sit amet.</p>
-            </div>
-        </div>
-    </div>
-    <div class="fdiv">
-        <div class="single-menu">
-            <img src="../assets/image/04.jpg" alt="">
-            <div class="menu-content">
-                <h5>biryani <span>rs.50</span></h5>
-                <p>Lorem ipsum dolor sit amet.</p>
-            </div>
-        </div>
-        <div class="single-menu">
-            <img src="../assets/image/05.jpg" alt="">
-            <div class="menu-content">
-                <h5>food title <span>rs.50</span></h5>
-                <p>Lorem ipsum dolor sit amet.</p>
-            </div>
-        </div>
-        <div class="single-menu">
-            <img src="../assets/image/06.jpg" alt="">
-            <div class="menu-content">
-                <h5>food title <span>rs.50</span></h5>
-                <p>Lorem ipsum dolor sit amet.</p>
-            </div>
-        </div>
-    </div>
-    <div class="fdiv">
-        <div class="single-menu">
-            <img src="../assets/image/07.jpg" alt="">
-            <div class="menu-content">
-                <h5>biryani <span>rs.50</span></h5>
-                <p>Lorem ipsum dolor sit amet.</p>
-            </div>
-        </div>
-        <div class="single-menu">
-            <img src="../assets/image/08.jpg" alt="">
-            <div class="menu-content">
-                <h5>food title <span>rs.50</span></h5>
-                <p>Lorem ipsum dolor sit amet.</p>
-            </div>
-        </div>
-        <div class="single-menu">
-            <img src="../assets/image/09.jpg" alt="">
-            <div class="menu-content">
-                <h5>food title <span>rs.50</span></h5>
-                <p>Lorem ipsum dolor sit amet.</p>
-            </div>
-        </div>
-    </div>
-    <div class="section-title2">
-        <h2>our popular dishes</h2>
-        <p class="psection">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam quisquam eaque accusamus debitis autem quod. Voluptates distinctio totam, numquam quibusdam vel eum delectus veritatis mollitia sint vero nulla recusandae neque quia quasi, sed quidem dolor voluptatibus? Tenetur odio voluptas illo.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam quisquam eaque accusamus debitis autem quod. Voluptates distinctio totam, numquam quibusdam vel eum delectus veritatis mollitia sint vero nulla recusandae neque quia quasi, sed quidem dolor voluptatibus?</p>
-         
-      </div>
+    </ng-container>
+</div>
+
+<div class="section-title2">
+    <h2>our popular dishes</h2>
+    <p class="psection">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam quisquam eaque
+        accusamus debitis autem quod. Voluptates distinctio totam, numquam quibusdam vel eum delectus veritatis
+        mollitia sint vero nulla recusandae neque quia quasi, sed quidem dolor voluptatibus? Tenetur odio
+        voluptas illo.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam quisquam eaque accusamus
+        debitis autem quod. Voluptates distinctio totam, numquam quibusdam vel eum delectus veritatis mollitia
+        sint vero nulla recusandae neque quia quasi, sed quidem dolor voluptatibus?</p>
 
 </div>
