--- a/express-restraurant-UI/src/app/components/our-menu/our-menu.component.scss
+++ b/express-restraurant-UI/src/app/components/our-menu/our-menu.component.scss
@@ -10,6 +10,7 @@
     display: inline-block;
     padding-bottom: 10px;
     margin-bottom: 5px;
+    margin-top: 40px;
 }
 .section-title h2:before{
     content:'';
@@ -41,6 +42,7 @@
 #nav-menu ul{
     /* justify-content:center;
     text-align: center; */
+    margin-top: 16px;
     margin-left: 1%;
 }
 #nav-menu ul li{
@@ -55,7 +57,7 @@
     
 }
  
-#nav-menu ul li a{
+#nav-menu ul li span{
     padding: 10px 20px;
     font-size: 20px;
     font-weight: 500;
@@ -63,11 +65,15 @@
     
   
     border-radius: 0px;
-    /* border: 1px solid #BBBBBB; */
     text-decoration: none;
     cursor: pointer;
 }
-#nav-menu ul li a:hover{
+#nav-menu ul li span:hover{
+    background-color: #FFB03B;
+    color: #fff;
+    border:1px solid #FFB03B;
+}
+#nav-menu ul li span.active{
     background-color: #FFB03B;
     color: #fff;
     border:1px solid #FFB03B;
@@ -75,58 +81,46 @@
 .single-menu{
     display: flex;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 30px;
     margin-bottom: 1.5px;
     border: 1px solid #ddd;
-    width: 23%;
     margin-left: 1%;
 }
 .single-menu:hover{
     box-shadow: 0 0 5px #74ADC8;
 }
 .single-menu img{
-    border-radius: 50%;
-    /* max-width: 110px; */
-    width: 90px;
-    height: 90px;
-    border:1px dashed#ddd;
-    padding: 3px;
+    border-right:1px dashed#ddd;
+    padding: 5px;
     margin-right: 15px;
     transition: .3s;
 }
-/* .single-menu:hover img{
-    transform: rotate(360deg);
+// .single-menu:hover img{
+//     transform: rotate(360deg);
 
-} */
+// } 
 .menu-content h5{ 
     text-transform: capitalize;
     font-size:1rem;
-    font-weight: 700;
-    border-bottom: 1px dashed #222;
-    padding-bottom: 5px;
-    margin-bottom: 10px;
-}
-span{
-    /* padding: 5px 5px 0px 0px; */
-    margin-right: 5px;
-
+    font-weight: 800;
+    margin:2px;
 }
 .menu-content p{
     text-transform: capitalize;
-    font-size:0.8rem;
-    font-weight: 700;
+    font-size:0.9rem;
+    font-weight: 500;
+    color:rgb(90, 90,90);
+    margin: 2px;
 
 }
-.single-menu .menu-content h5 span{
-    color: #FFB03B;
-    float: right;
+.menu-content h4{
     font-weight: 600;
     font-style: italic;
+    font-size: 22px;
+    color: #FFA41F;
+    margin-top: 15px;
 }
-.fdiv {
-    display:flex;
-    margin-left: 21%;
-}
+ 
 /* section-title2 css start */
  
 .section-title2{
@@ -159,8 +153,30 @@ span{
     padding-right: 15%;
     padding-left: 15%;
 }
-/* .psection{
-    text-align: center;
-    padding-right: 15%;
-    padding-left: 15%;
-} */
+.mdiv{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 79%;
+    margin: 15px 10%;
+}
+.fdiv{
+    width: 31%;
+    margin-left: 26px;
+}
+.cart{
+    display: flex;
+    justify-content: space-between;
+     
+}
+.cart-2{
+    margin-top: 12px;
+    margin-right: 20px;
+    margin-bottom: 5px;
+    cursor: pointer;
+}
+.cart-2{
+    color: #8bc34a;
+}
+ 
+ 
